# moodle-grading-tool

./: Cargo.toml
src/: assignment.rs  main.rs
