[package]
name = "moodle-grading-tool"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
calamine = "0.24.0"
clap = { version = "4.5.4", features = ["derive"] }
clap_derive = "4.5.4"
fuzzy-matcher = "0.3.7"
serde = { version = "1.0.197", features = ["derive"] }
